<resources>
    <string name="app_name">insideOut</string>

    <string name="desc"></string>
   <!-- popup dialog-->
    <string name="popup_project">Enter your project name :</string>
    <string name="pName">Project Name</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

    <string name="create_new">Create New</string>
    <string name="my_projects">My Projects</string>
    <string name="my_cloud">My Cloud</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="process">Process</string>

</resources>
