<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.insideout.MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/frontLogo"
        android:src="@drawable/globe"
        android:contentDescription="@string/desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textSize = "32sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/frontLogo"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:layout_marginTop="54dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_alignBaseline="@+id/textViewEmail"
        android:layout_alignBottom="@+id/textViewEmail"
        android:layout_toRightOf="@+id/textViewEmail"
        android:layout_toEndOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/editTextEmail"
        android:layout_toStartOf="@+id/editTextEmail"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_toEndOf="@+id/textViewPassword"
        android:layout_toRightOf="@+id/textViewPassword"
        android:ems="10"
        android:inputType="textPassword" />


</RelativeLayout>
